# django_narguile

./: .env.development  Dockerfile  README.md  pyproject.toml
base/: models.py  urls.py
base/templates/: base.html  home.html
narguile/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
narguile/migrations/: 0001_initial.py  0002_remove_narguile_image.py  0003_remove_narguile_deleted_at.py
narguile/static/: style.css
narguile/templates/: forms.html  narguile.html
setup/: settings.py  urls.py
