[tool.poetry]
name = "django_narguile"
version = "0.1.0"
description = ""
authors = ["JuniorCardoso <tarcisio.cardoso@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
